[gd_scene load_steps=18 format=2]

[ext_resource path="res://DialogueBoxes/common/theme.tres" type="Theme" id=1]
[ext_resource path="res://ObstacleCourse_Part3/practices/common/UIItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ObstacleCourse_Part3/practices/04.Equipping/Equipping.gd" type="Script" id=4]
[ext_resource path="res://ObstacleCourse_Part3/practices/common/UITooltip.tscn" type="PackedScene" id=5]
[ext_resource path="res://ObstacleCourse_Part3/practices/common/UIDraggedItemPreview.tscn" type="PackedScene" id=6]
[ext_resource path="res://ObstacleCourse_Part3/practices/04.Equipping/EquipInventory.gd" type="Script" id=7]
[ext_resource path="res://ObstacleCourse_Part3/practices/assets/godot_front.png" type="Texture" id=8]
[ext_resource path="res://ObstacleCourse_Part3/practices/04.Equipping/inventory.tres" type="Resource" id=9]
[ext_resource path="res://ObstacleCourse_Part3/practices/04.Equipping/Character.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.282353, 0.282353, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.188235, 0.188235, 0.286275, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0352941, 0.0392157, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.0941176, 0.188235, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=7]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
Panel/styles/panel = SubResource( 2 )
PanelContainer/styles/panel = SubResource( 2 )
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/normal_font = null

[node name="Equipping" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="UIInventory" type="Panel" parent="."]
margin_left = 288.0
margin_top = 141.0
margin_right = 1632.0
margin_bottom = 939.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
script = ExtResource( 7 )
inventory = ExtResource( 9 )

[node name="UITooltip" parent="UIInventory" instance=ExtResource( 5 )]
visible = false
margin_right = 260.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="UIInventory"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UIInventory/HBoxContainer"]
margin_right = 890.0
margin_bottom = 798.0
size_flags_horizontal = 3

[node name="ItemGrid" type="GridContainer" parent="UIInventory/HBoxContainer/VBoxContainer"]
margin_right = 890.0
margin_bottom = 590.0
size_flags_vertical = 3
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 7

[node name="HSeparator" type="HSeparator" parent="UIInventory/HBoxContainer/VBoxContainer"]
margin_top = 594.0
margin_right = 890.0
margin_bottom = 654.0
custom_constants/separation = 60

[node name="Equipment" type="HBoxContainer" parent="UIInventory/HBoxContainer/VBoxContainer"]
margin_top = 658.0
margin_right = 890.0
margin_bottom = 798.0
custom_constants/separation = 40
alignment = 1

[node name="LeftHandSlot" parent="UIInventory/HBoxContainer/VBoxContainer/Equipment" instance=ExtResource( 2 )]
margin_left = 223.0
margin_right = 363.0
margin_bottom = 140.0

[node name="Spacer" type="TextureRect" parent="UIInventory/HBoxContainer/VBoxContainer/Equipment"]
margin_left = 403.0
margin_right = 487.0
margin_bottom = 140.0
rect_min_size = Vector2( 80, 0 )
texture = ExtResource( 8 )

[node name="RightHandSlot" parent="UIInventory/HBoxContainer/VBoxContainer/Equipment" instance=ExtResource( 2 )]
margin_left = 527.0
margin_right = 667.0
margin_bottom = 140.0

[node name="CenterContainer" type="CenterContainer" parent="UIInventory/HBoxContainer"]
margin_left = 894.0
margin_right = 1344.0
margin_bottom = 798.0
rect_min_size = Vector2( 450, 0 )

[node name="Control" type="Control" parent="UIInventory/HBoxContainer/CenterContainer"]
margin_left = 225.0
margin_top = 399.0
margin_right = 225.0
margin_bottom = 399.0

[node name="Character" parent="UIInventory/HBoxContainer/CenterContainer/Control" instance=ExtResource( 10 )]
inventory = ExtResource( 9 )

[node name="UIDraggedItemPreview" parent="UIInventory" instance=ExtResource( 6 )]
